# invoice-manager

./: .gitignore  README.md  conda.yaml  config.yaml  pyproject.toml
invoice_manager/: app.py  manager.py  refund.py
invoice_manager/core/: importer.py  invoice_lister.py  invoice_processor.py  json_repository.py  refund_processor.py  repository.py  requester.py  stats_calculator.py
invoice_manager/mail/: gmail.py
invoice_manager/models/: config.py  exceptions.py  invoice.py  options.py  refundstatus.py
invoice_manager/tests/: example_invoices.json  test_RefundStatus_enum.py  test_app.py  test_import_helper.py  test_invoice.py  test_invoice_evaluator.py  test_invoice_processor.py  test_json_repository.py  test_repository.py  test_requester.py
invoice_manager/ui/: invoice_table.py  stats_table.py
